--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,17 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# vim
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+
+# Backup files
+*~
+
+# OS dependent files
+.DS_Store
+Thumbs.db
